Adjust column gap, added correct video link

--- a/src/styles/about.module.scss
+++ b/src/styles/about.module.scss
@@ -31,6 +31,7 @@
 
   @media (min-width: 55rem) {
     column-count: 2;
+    column-gap: 3.5em;
   }
 
   h1 {
