--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -40,6 +40,11 @@
     position: relative;
     display: flex;
     // max-width: 25rem;
+    iframe {
+      width: 100%;
+      height: 15rem;
+      margin-top: 3rem;
+    }
 
     img {
       width: 100%;
